--- a/templates/wild/season.html.twig
+++ b/templates/wild/season.html.twig
@@ -11,14 +11,14 @@
             <p>Liste des épisodes : </p>
                 {% for episode in episodes %}
                     <div>
-                    <a href="#">Episode {{ episode.number }}</a>
+                    <a href="{{ path('wild_program_season_episode', {'program' : program.id, 'season' : season.id, 'episode' : episode.id}) }}">Episode {{ episode.number }}</a>
                     </div>
                 {% endfor %}
         </div>
     </div>
 
-    <a href="{{ path('wild_index') }}">
-        Retour à l'accueil des séries
+    <a href="{{ path('wild_show', {'program' : program.id}) }}">
+        Retour à la série {{ program.title }}
     </a>
 
 {% endblock %}
