--- a/templates/wild/show.html.twig
+++ b/templates/wild/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ slug }}{% endblock %}
+{% block title %}{{ program.title }}{% endblock %}
 
 {% block body %}
 
@@ -10,11 +10,17 @@
             <h1 class="mt-0">{{ program.title }}</h1>
             <p>{{ program.summary }}</p>
             <p>Categorie : {{ program.category.name }}</p>
+            {% for season in seasons %}
+                <div>
+                    <a href="{{ path('wild_program_season', {'slug' : program.title, 'id' : season.id}) }}">{{ season.description }}</a>
+                </div>
+            {% endfor %}
+            <div>
+                <a href="{{ path('wild_index') }}">
+                    Retour à l'accueil des séries
+                </a>
+            </div>
         </div>
     </div>
-
-    <a href="{{ path('wild_index') }}">
-        Retour à l'accueil
-    </a>
 
 {% endblock %}
