--- a/templates/category/add.html.twig
+++ b/templates/category/add.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <h1>Ajouter une catégorie</h1>
-    <div class="container d-flex ml-0 pl-0">
+    <div class="container d-flex flex-column ml-0 pl-0">
         <div>
             {{ message }}
         </div>
