--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -13,6 +13,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{{ path('wild_index') }}">Toutes les séries</a>
                     <a class="dropdown-item" href="{{ path('wild_program', { 'slug': "walking-dead" }) }}">Walking dead</a>
+                    <a class="dropdown-item" href="{{ path('program_index')}}">CRUD</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{{ path('wild_show_category', { 'categoryName': "horreur" }) }}">Horreur</a>
                 </div>
