--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -31,8 +31,8 @@
                     Acteurs
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="{{ path('wild_actor', { 'name': 'andrew lincoln'}) }}">Andrew Lincoln</a>
+                    <a class="dropdown-item" href="{{ path('wild_actor', { 'name': 'norman reedus'}) }}">Norman Reedus</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Something else here</a>
                 </div>
