--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -21,10 +21,18 @@
             </tr>
             <tr>
                 <th>Poster</th>
-                <td>{{ program.poster }}</td>
+                <td><img src="{{ program.poster }}" alt="poster de la série" class="w-25"></td>
             </tr>
         </tbody>
     </table>
+    <strong>Acteur :</strong>
+    <ul>
+        {% for actor in program.actors %}
+            <li><a href="{{ path('wild_actor', {'name': actor.name}) }}">{{ actor.name }}</a></li>
+        {% else %}
+            <li>Aucun acteur pour cette série</li>
+        {% endfor %}
+    </ul>
 
     <a href="{{ path('program_index') }}">back to list</a>
 
