--- a/templates/wild/season.html.twig
+++ b/templates/wild/season.html.twig
@@ -17,7 +17,7 @@
         </div>
     </div>
 
-    <a href="{{ path('wild_show', {'program' : program.id}) }}">
+    <a href="{{ path('wild_show', {'slug' : program.slug}) }}">
         Retour à la série {{ program.title }}
     </a>
 
