--- a/templates/wild/actor.html.twig
+++ b/templates/wild/actor.html.twig
@@ -6,7 +6,7 @@
     <h1>{{ actor.name}}</h1>
     {% for program in programs %}
         <div>
-            <h2><a href="{{ path('program_show', {'id': program.id}) }}">{{ program.title }}</a></h2>
+            <h2><a href="{{ path('program_show', {'slug': program.slug}) }}">{{ program.title }}</a></h2>
             <p>{{ program.summary }}</p>
         </div>
     {% else %}
