--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -41,7 +41,11 @@
                 <a class="nav-link" href="#">Mes Favoris</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Inscription <span class="sr-only">(current)</span></a>
+                {% if app.user %}
+                <a class="nav-link" href="{{ path('app_profile') }}">{{ app.user.email }}<span class="sr-only">(current)</span></a>
+                {% else %}
+                <a class="nav-link" href="{{ path('app_register') }}">Inscription <span class="sr-only">(current)</span></a>
+                {% endif %}
             </li>
             <li class="nav-item">
                 {% if app.user %}
