--- a/templates/security/profile.html.twig
+++ b/templates/security/profile.html.twig
@@ -5,6 +5,6 @@
 {% block body %}
     <h1>Mon Compte</h1>
     <div class="d-flex justify-content-center">
-    <h3>Hello {{ last_username }}</h3>
+    <h3>Hello {{ app.user.email }}</h3>
     </div>
 {% endblock %}
