--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -12,6 +12,7 @@
                 <th>Title</th>
                 <th>Summary</th>
                 <th>Poster</th>
+                <th>Actors</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -22,6 +23,17 @@
                 <td>{{ program.title }}</td>
                 <td>{{ program.summary }}</td>
                 <td><img src="{{ program.poster }}" alt="poster de la série" class="w-50"></td>
+                <td>
+                    <ul>
+                        {% for actor in program.actors %}
+                        <li>
+                           {{ actor.name }}
+                        </li>
+                        {% else %}
+                               Aucun acteur
+                        {% endfor %}
+                    </ul>
+                </td>
                 <td>
                     <a href="{{ path('program_show', {'slug': program.slug}) }}">show</a>
                     <a href="{{ path('program_edit', {'slug': program.slug}) }}">edit</a>
