success and danger flash messages added to new, edit and delete program, season and episode controllers

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,13 @@
     <body>
         <header>
             {% include '_navbar.html.twig' %}
+            {% for label, messages in app.flashes %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ label }}" role="alert">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endfor %}
         </header>
         {% block body %}
         {% endblock %}
