--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -5,5 +5,5 @@
 {% endblock %}
 
 {% block body %}
-    <h1> Bienvenue sur Wild Series !</h1>
+    <h1> {{ 'welcome'|trans }} !</h1>
 {% endblock %}
