--- a/templates/category/add.html.twig
+++ b/templates/category/add.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Add Category Form{% endblock %}
+{% block title %}{{ 'category.add'|trans}}{% endblock %}
 
 {% block body %}
-    <h1>Ajouter une catégorie</h1>
+    <h1>{{ 'category.add'|trans}}</h1>
     <div class="container d-flex flex-column ml-0 pl-0">
         <div>
             {{ message }}
