--- a/templates/actor/new.html.twig
+++ b/templates/actor/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Actor{% endblock %}
+{% block title %}{{ 'actor.new'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>Create new Actor</h1>
+    <h1>{{ 'actor.new'|trans }}</h1>
 
     {{ include('actor/_form.html.twig') }}
 
-    <a href="{{ path('actor_index') }}">back to list</a>
+    <a href="{{ path('actor_index') }}">{{ 'actor.list'|trans }}</a>
 {% endblock %}
