--- a/templates/actor/show.html.twig
+++ b/templates/actor/show.html.twig
@@ -1,26 +1,26 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Actor{% endblock %}
+{% block title %}{{ 'actor'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>Actor</h1>
+    <h1>{{ 'actor'|trans }}</h1>
 
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>{{ 'id'|trans }}</th>
                 <td>{{ actor.id }}</td>
             </tr>
             <tr>
-                <th>Name</th>
+                <th>{{ 'actor.name'|trans }}</th>
                 <td>{{ actor.name }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('actor_index') }}">back to list</a>
+    <a href="{{ path('actor_index') }}">{{ 'actor.list'|trans }}</a>
 
-    <a href="{{ path('actor_edit', {'slug': actor.slug}) }}">edit</a>
+    <a href="{{ path('actor_edit', {'slug': actor.slug}) }}">{{ 'edit'|trans }}</a>
 
     {{ include('actor/_delete_form.html.twig') }}
 {% endblock %}
