--- a/templates/comment/index.html.twig
+++ b/templates/comment/index.html.twig
@@ -1,17 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Comment index{% endblock %}
+{% block title %}{{ 'comment'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>Comment index</h1>
+    <h1>{{ 'comment'|trans }}</h1>
 
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>Comment</th>
-                <th>Rate</th>
-                <th>actions</th>
+                <th>{{ 'id'|trans }}</th>
+                <th>{{ 'comment'|trans }}</th>
+                <th>{{ 'comment.rate'|trans }}</th>
+                <th>{{ 'comment.action'|trans }}</th>
             </tr>
         </thead>
         <tbody>
@@ -21,17 +21,17 @@
                 <td>{{ comment.comment }}</td>
                 <td>{{ comment.rate }}</td>
                 <td>
-                    <a href="{{ path('comment_show', {'id': comment.id}) }}">show</a>
-                    <a href="{{ path('comment_edit', {'id': comment.id}) }}">edit</a>
+                    <a href="{{ path('comment_show', {'id': comment.id}) }}">{{ 'show'|trans }}</a>
+                    <a href="{{ path('comment_edit', {'id': comment.id}) }}">{{ 'edit'|trans }}</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="4">no records found</td>
+                <td colspan="4">{{ 'comment.none'|trans }}</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('comment_new') }}">Create new</a>
+    <a href="{{ path('comment_new') }}">{{ 'comment.new'|trans }}</a>
 {% endblock %}
