--- a/templates/comment/show.html.twig
+++ b/templates/comment/show.html.twig
@@ -1,30 +1,30 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Comment{% endblock %}
+{% block title %}{{ 'comment'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>Comment</h1>
+    <h1>{{ 'comment'|trans }}</h1>
 
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>{{ 'id'|trans }}</th>
                 <td>{{ comment.id }}</td>
             </tr>
             <tr>
-                <th>Comment</th>
+                <th>{{ 'comment'|trans }}</th>
                 <td>{{ comment.comment }}</td>
             </tr>
             <tr>
-                <th>Rate</th>
+                <th>{{ 'comment.rate'|trans }}</th>
                 <td>{{ comment.rate }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('comment_index') }}">back to list</a>
+    <a href="{{ path('comment_index') }}">{{ 'comment.list'|trans }}</a>
 
-    <a href="{{ path('comment_edit', {'id': comment.id}) }}">edit</a>
+    <a href="{{ path('comment_edit', {'id': comment.id}) }}">{{ 'edit'|trans }}</a>
 
     {{ include('comment/_delete_form.html.twig') }}
 {% endblock %}
