--- a/templates/season/index.html.twig
+++ b/templates/season/index.html.twig
@@ -1,17 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Season index{% endblock %}
+{% block title %}{{ 'season'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>Season index</h1>
+    <h1>{{ 'season'|trans }}</h1>
 
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>Year</th>
-                <th>Description</th>
-                <th>actions</th>
+                <th>{{ 'id'|trans }}</th>
+                <th>{{ 'season.year'|trans }}</th>
+                <th>{{ 'season.description'|trans }}</th>
+                <th>{{ 'season.action'|trans }}</th>
             </tr>
         </thead>
         <tbody>
@@ -21,19 +21,19 @@
                 <td>{{ season.year }}</td>
                 <td>{{ season.description }}</td>
                 <td>
-                    <a href="{{ path('season_show', {'id': season.id}) }}">show</a>
-                    <a href="{{ path('season_edit', {'id': season.id}) }}">edit</a>
+                    <a href="{{ path('season_show', {'id': season.id}) }}">{{ 'show'|trans }}</a>
+                    <a href="{{ path('season_edit', {'id': season.id}) }}">{{ 'edit'|trans }}</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="4">no records found</td>
+                <td colspan="4">{{ 'season.none'|trans }}</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('season_new') }}">Créer une saison</a>
-    <a href="{{ path('program_index') }}">Liste des programmes</a>
-    <a href="{{ path('episode_index') }}">Liste des épisodes</a>
+    <a href="{{ path('season_new') }}">{{ 'season.new'|trans }}</a>
+    <a href="{{ path('program_index') }}">{{ 'program.list'|trans }}</a>
+    <a href="{{ path('episode_index') }}">{{ 'episode.list'|trans }}</a>
 {% endblock %}
