--- a/templates/season/show.html.twig
+++ b/templates/season/show.html.twig
@@ -1,30 +1,30 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Season{% endblock %}
+{% block title %}{{ 'season'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>Season</h1>
+    <h1>{{ 'season'|trans }}</h1>
 
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>{{ 'id'|trans }}</th>
                 <td>{{ season.id }}</td>
             </tr>
             <tr>
-                <th>Year</th>
+                <th>{{ 'season.year'|trans }}</th>
                 <td>{{ season.year }}</td>
             </tr>
             <tr>
-                <th>Description</th>
+                <th>{{ 'season.description'|trans }}</th>
                 <td>{{ season.description }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('season_index') }}">back to list</a>
+    <a href="{{ path('season_index') }}">{{ 'season.list'|trans }}</a>
 
-    <a href="{{ path('season_edit', {'id': season.id}) }}">edit</a>
+    <a href="{{ path('season_edit', {'id': season.id}) }}">{{ 'edit'|trans }}</a>
 
     {{ include('season/_delete_form.html.twig') }}
 {% endblock %}
