--- a/templates/security/profile.html.twig
+++ b/templates/security/profile.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mon Compte{% endblock %}
+{% block title %}{{ 'account'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>Mon Compte</h1>
+    <h1>{{ 'account'|trans }}</h1>
     <div class="d-flex justify-content-center">
-    <h3>Hello {{ app.user.email }}</h3>
+    <h3>{{ 'welcome'|trans }} {{ app.user.email }}</h3>
     </div>
 {% endblock %}
