--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -1,14 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}{{ 'account.register'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+    <h1>{{ 'account.register'|trans }}</h1>
 
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword) }}
         {{ form_row(registrationForm.agreeTerms) }}
-        <button class="btn">Register</button>
+        <button class="btn">{{ 'account.register'|trans }}</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
