--- a/templates/wild/category.html.twig
+++ b/templates/wild/category.html.twig
@@ -1,18 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Catégorie{{ category.name}}{% endblock %}
+{% block title %}{{ 'category'|trans }}{{ category.name}}{% endblock %}
 
 {% block body %}
-    <h1>Catégorie {{ category.name}}</h1>
+    <h1>{{ 'category'|trans }} {{ category.name}}</h1>
     {% for program in programs %}
         <div>
             <h2>{{ program.id}} / {{ program.title }}</h2>
             <p>{{ program.summary }}</p>
         </div>
     {% else %}
-        Aucune série trouvée.
+        {{ 'program.none'|trans }}
     {% endfor %}
     <a href="{{ path('app_index') }}">
-        Retour à l'accueil
+        {{ 'homepage'|trans }}
     </a>
 {% endblock %}
