--- a/templates/wild/season.html.twig
+++ b/templates/wild/season.html.twig
@@ -8,17 +8,17 @@
         <div class="media-body">
             <h1 class="mt-0">{{ program.title }}</h1>
             <h2 class="mt-0">{{ season.description }}</h2>
-            <p>Liste des épisodes : </p>
+            <p>{{ 'episode.list'|trans }} : </p>
                 {% for episode in episodes %}
                     <div>
-                    <a href="{{ path('wild_program_season_episode', {'episode' : episode.id}) }}">Episode {{ episode.number }}</a>
+                    <a href="{{ path('wild_program_season_episode', {'episode' : episode.id}) }}">{{ 'episode'|trans }} {{ episode.number }}</a>
                     </div>
                 {% endfor %}
         </div>
     </div>
 
     <a href="{{ path('wild_show', {'slug' : program.slug}) }}">
-        Retour à la série {{ program.title }}
+        {{ 'program'|trans }}
     </a>
 
 {% endblock %}
